Migragte the identity tables (check BCPT.ABSTRACTION.Assets.Identity_Tables.png)

--- a/BCPT.API/BCPT.API.csproj
+++ b/BCPT.API/BCPT.API.csproj
@@ -21,4 +21,8 @@
     <Folder Include="Controllers\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BCPT.ABSTACTION\BCPT.ABSTACTION.csproj" />
+  </ItemGroup>
+
 </Project>
