--- a/BCPT.API/appsettings.json
+++ b/BCPT.API/appsettings.json
@@ -6,6 +6,11 @@
     }
   },
   "AllowedHosts": "*",
+  "JwtOptions": {
+    "Audience": "ibrahim",
+    "Issuer": "ibrahim",
+    "Secret": "F5n7s8B2p4M6w9Q1v3T5c8E2a4F6d9Z1e3R5"
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Server=COMP-0765;Database=BCPT_DB;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
   }
